Added barcode screen

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -112,6 +112,8 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="{% url 'c_note_master' %}">C Note Master</a></li>
+                        <li><a class="dropdown-item" href="{% url 'print_barcode_stickers' %}" target="_blank">Generate barcode</a></li>
+
                         {% endif %}
                         <li>
                             <hr class="dropdown-divider">
