--- a/api/templates/cash_booking.html
+++ b/api/templates/cash_booking.html
@@ -142,10 +142,7 @@
                                         <label for="to_destination"><b>To Destination</b>
                                         <span class="red_color">*</span>
                                     </label>
-                                        <select class="form-select control-label form-select-sm" name="to_destination" id="to_destination" aria-label="To Destination" required>
-                                        {% for des in destinations %}
-                                        <option value="{{ des.id }}">{{ des.name }}</option>
-                                        {% endfor %}
+                                        <select class="form-select control-label form-select-sm" name="to_destination" id="to_destination" aria-label="To Destination" required>                                        
                                     </select>
                                     </div>
                                     <div class="col-md-6">
@@ -507,53 +504,79 @@
             };
         })
 
-        // Edit details fill from here if available
-        var edit_details = "{{ edit_page }}";
-        if (edit_details == 1) {
-            $("#id_of").val('{{ booking_details.id }}');
-            $("#c_note_no").val('{{ booking_details.c_note_number }}');
-            $("#sender_mobile").val('{{ booking_details.sender_mobile }}');
-            $("#receiver_mobile").val('{{ booking_details.receiver_mobile_number }}');
-            $("#receiver_name").val('{{ booking_details.receiver_name }}');
-            $("#booking_type").val('{{ booking_details.booking_type.id }}').change();
-            var momentObj = moment("{{ booking_details.doc_date }}", "MMMM D, YYYY, h:mm a");
-            var formatted_date = momentObj.format("YYYY-MM-DDTHH:mm");
-            $("#datetime").val(formatted_date);
-            $("#payment_mode").val('{{ booking_details.payment_mode }}').change();
-            $("#ref_courier_name").val('{{ booking_details.ref_courier_name.id }}').change();
-            $("#ref_number").val('{{ booking_details.ref_courier_number }}');
-            $("#sender_name").val('{{ booking_details.sender_name }}');
-            $("#sender_address").val('{{ booking_details.sender_address }}');
-            $("#from_destination").val('{{ booking_details.from_destination.id }}').change();
-            $("#gst_number").val('{{ booking_details.gst_number }}');
-            $("#e_way_bill").val('{{ booking_details.e_way_bill_number }}');
-            $("#receiver_address").val('{{ booking_details.receiver_address }}');
-            $("#to_destination").val('{{ booking_details.to_destination.id }}').change();
-            $("#pincode").val('{{ booking_details.pincode }}');
-            $("#state").val('{{ booking_details.state.id }}');
-            $("#qty").val('{{ booking_details.pcs }}');
-            $("#charged_weight").val('{{ booking_details.charged_weight }}');
-            $("#actual_weight").val('{{ booking_details.weight }}');
-            $("#declare_value").val('{{ booking_details.declared_value }}');
-            $("#freight_charge").val('{{ booking_details.freight_charge }}');
-            $("#pod_charge").val('{{ booking_details.pod_charge }}');
-            $("#spcl_del_charge").val('{{ booking_details.spl_del_charge }}');
-            $("#insurance_amount").val('{{ booking_details.insurance_amt }}');
-            $("#insurance_percentage").val('{{ booking_details.insurance_per }}').change();
-            $("#gst_rate").val('{{ booking_details.gst_rate.id }}').change();
-            $("#gst_amount").val('{{ booking_details.gst_amount }}');
-            $("#total_amount").val('{{ booking_details.amount }}');
-            $("#remarks").val('{{ booking_details.remarks }}');
-            $("#booking_mode").val('{{ booking_details.booking_mode }}').change();
-            $("#mode_amount").val('{{ booking_details.mode_amount }}');
-            var cs_gst = "{{ booking_details.c_i_gst }}";
-            if (cs_gst == "False") {
-                $('input[name="gst_radio"][value="cs_gst"]').prop('checked', true);
-            } else {
-                $('input[name="gst_radio"][value="i_gst"]').prop('checked', true);
-            }
-        };
 
+        // Auto load destinations and all details.        
+        $(document).ready(function() {
+            var token = $("input[name='csrfmiddlewaretoken']").val();
+            var final_data = {
+                csrfmiddlewaretoken: token,
+            }
+            $.ajax({
+                url: "{% url 'retutn_all_foreign_key_details' %}",
+                method: "POST",
+                dataType: "json",
+                data: final_data,
+                success: function(res) {
+                    if (res.status) {
+                        var des = res.destinations;
+                        $("#to_destination").empty();
+                        for (var i = 0; i < des.length; i++) {
+                            $('#to_destination').append($('<option>', {
+                                value: des[i].id,
+                                text: des[i].name
+                            }));
+                        }
+                        // Edit details fill from here if available
+                        var edit_details = "{{ edit_page }}";
+                        if (edit_details == 1) {
+                            $("#id_of").val('{{ booking_details.id }}');
+                            $("#c_note_no").val('{{ booking_details.c_note_number }}');
+                            $("#sender_mobile").val('{{ booking_details.sender_mobile }}');
+                            $("#receiver_mobile").val('{{ booking_details.receiver_mobile_number }}');
+                            $("#receiver_name").val('{{ booking_details.receiver_name }}');
+                            $("#booking_type").val('{{ booking_details.booking_type.id }}').change();
+                            var momentObj = moment("{{ booking_details.doc_date }}", "MMMM D, YYYY, h:mm a");
+                            var formatted_date = momentObj.format("YYYY-MM-DDTHH:mm");
+                            $("#datetime").val(formatted_date);
+                            $("#payment_mode").val('{{ booking_details.payment_mode }}').change();
+                            $("#ref_courier_name").val('{{ booking_details.ref_courier_name.id }}').change();
+                            $("#ref_number").val('{{ booking_details.ref_courier_number }}');
+                            $("#sender_name").val('{{ booking_details.sender_name }}');
+                            $("#sender_address").val('{{ booking_details.sender_address }}');
+                            $("#from_destination").val('{{ booking_details.from_destination.id }}').change();
+                            $("#gst_number").val('{{ booking_details.gst_number }}');
+                            $("#e_way_bill").val('{{ booking_details.e_way_bill_number }}');
+                            $("#receiver_address").val('{{ booking_details.receiver_address }}');
+                            $("#to_destination").val('{{ booking_details.to_destination.id }}').change();
+                            $("#pincode").val('{{ booking_details.pincode }}');
+                            $("#state").val('{{ booking_details.state.id }}');
+                            $("#qty").val('{{ booking_details.pcs }}');
+                            $("#charged_weight").val('{{ booking_details.charged_weight }}');
+                            $("#actual_weight").val('{{ booking_details.weight }}');
+                            $("#declare_value").val('{{ booking_details.declared_value }}');
+                            $("#freight_charge").val('{{ booking_details.freight_charge }}');
+                            $("#pod_charge").val('{{ booking_details.pod_charge }}');
+                            $("#spcl_del_charge").val('{{ booking_details.spl_del_charge }}');
+                            $("#insurance_amount").val('{{ booking_details.insurance_amt }}');
+                            $("#insurance_percentage").val('{{ booking_details.insurance_per }}').change();
+                            $("#gst_rate").val('{{ booking_details.gst_rate.id }}').change();
+                            $("#gst_amount").val('{{ booking_details.gst_amount }}');
+                            $("#total_amount").val('{{ booking_details.amount }}');
+                            $("#remarks").val('{{ booking_details.remarks }}');
+                            $("#booking_mode").val('{{ booking_details.booking_mode }}').change();
+                            $("#mode_amount").val('{{ booking_details.mode_amount }}');
+                            var cs_gst = "{{ booking_details.c_i_gst }}";
+                            if (cs_gst == "False") {
+                                $('input[name="gst_radio"][value="cs_gst"]').prop('checked', true);
+                            } else {
+                                $('input[name="gst_radio"][value="i_gst"]').prop('checked', true);
+                            }
+                        };
+                    }
+                }
+            });
+        });
+        // Above code will help to add destinations using jquery.        
         $("#ref_courier_name").focus();
     });
 </script>
