--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -107,14 +107,14 @@
                 <tr>
                     <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b>, Mob: {{bd.sender_mobile }}</td>
                     {% if bd.mode_amount %}
-                    <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>{{ bd.mode_amount }}</b></td>
+                    <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>Rs. {{ bd.mode_amount }}</b></td>
                     {% else %}
                     <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b></b></td>
                     {% endif %}
                 </tr>
                 <tr>
-                    <td colspan="8" style="font-size: 10px; border-bottom: 1px solid black;">Ref No: {{ bd.ref_courier_number }}</td>
-                    <!-- <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 10px;"><b>Payment: </b></td> -->
+                    <td colspan="8" style="font-size: 10px; border-bottom: 1px solid black;">Party: {{ bd.party_name }}</td>
+                    <!-- <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 10px;"><b>Payment: ref_courier_number </b></td> -->
                     <!-- <td colspan="2" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b></b></td> -->
                 </tr>
 
@@ -241,7 +241,7 @@
                     {% endif %}
                 </tr>
                 <tr>
-                    <td colspan="8" style="font-size: 10px; border-bottom: 1px solid black;">Ref No: {{ bd.ref_courier_number }}</td>
+                    <td colspan="8" style="font-size: 10px; border-bottom: 1px solid black;">Party: {{ bd.party_name }}</td>
                     <!-- <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 10px;"><b>Payment: </b></td> -->
                     <!-- <td colspan="2" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b></b></td> -->
                 </tr>
