--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -233,37 +233,36 @@
                 </tr>
 
                 <tr>
-                    <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b>, Mob: {{bd.sender_mobile }}</td>
+                    <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b></td>
                     {% if bd.mode_amount %}
                     <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>{{ bd.mode_amount }}</b></td>
                     {% else %}
                     <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b></b></td>
                     {% endif %}
                 </tr>
-                <tr>
-                    <td colspan="8" style="font-size: 10px; border-bottom: 1px solid black;">Party: {{ bd.party_name }}</td>
-                    <!-- <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 10px;"><b>Payment: </b></td> -->
-                    <!-- <td colspan="2" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b></b></td> -->
-                </tr>
+                <!-- <tr> -->
+                <!-- <td colspan="8" style="font-size: 10px; border-bottom: 1px solid black;">Party: {{ bd.party_name }}</td> -->
+                <!-- <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 10px;"><b>Payment: </b></td> -->
+                <!-- <td colspan="2" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b></b></td> -->
+                <!-- </tr> -->
 
                 <tr>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
+                    <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
+                    <!-- <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
                     <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Ins ch.</b></td>
                     <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
                     <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Spl del ch.</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td>
-                    <td colspan="2" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Total Amount</b></td>
-
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td> -->
+                    <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Valuue</b></td>
                 </tr>
                 <tr>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.pcs }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.charged_weight }}</td>
+                    <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.pcs }}</td>
+                    <!-- <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.charged_weight }}</td>
                     <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.insurance_amt }}</td>
                     <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.declared_value }}</td>
                     <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.spl_del_charge }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.freight_charge }}</td>
-                    <td colspan="2" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>Rs. {{ bd.amount }}</b></td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.freight_charge }}</td> -->
+                    <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>₹ {{ bd.declared_value }}</b></td>
                 </tr>
                 <tr>
                     <td colspan="8" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>Item Desc:</b> {{ bd.remarks }}</td>
