Back to old stage for booking dashboard

--- a/api/templates/booking_dashboard.html
+++ b/api/templates/booking_dashboard.html
@@ -327,9 +327,9 @@
     var print_pending = localStorage.getItem('print_id');
     if (print_pending) {
         var new_url = "print_cash_booking/" + print_pending;
-        // window.open(new_url, "_blank");
-        var print_url = '<a href="http://206.189.133.131:8080/' + new_url + '" target="blank"></a>'
-        $(print_url)[0].click();
+        window.open(new_url, "_blank");
+        // var print_url = '<a href="http://206.189.133.131:8080/' + new_url + '" target="blank"></a>'
+        // $(print_url)[0].click();
     }
 </script>
 
