--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -235,7 +235,7 @@
                 <tr>
                     <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b></td>
                     {% if bd.mode_amount %}
-                    <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>{{ bd.mode_amount }}</b></td>
+                    <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>₹ {{ bd.mode_amount }}</b></td>
                     {% else %}
                     <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b></b></td>
                     {% endif %}
