Add auto focus on index page

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -177,6 +177,8 @@
         var logged_in = '{{ request.user.is_authenticated }}';
         if (logged_in == "False") {
             $('#myModal').modal('show');
+        } else {
+            $("#trackingdetails").focus();
         }
     });
 
