Added print bulk button

--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -97,7 +97,7 @@
                         <label for="receiver_mobile"><b>Receiver Mobile</b>
                             <span class="red_color">*</span>
                         </label>
-                        <input type="text" name="r_number" id="receiver_mobile" class="form-control" required>
+                        <input type="text" name="r_number" id="receiver_mobile" class="form-control" maxlength="10" minlength="10" required>
                         <!-- placeholder="Receiver Mobile Number"> -->
                     </div>
                 </div>
