--- a/api/templates/booking_dashboard.html
+++ b/api/templates/booking_dashboard.html
@@ -23,7 +23,7 @@
 
 <div class="container back_color">
     <div class="row">
-        {% for message in messages %} {% if request.session.success %}
+        {% csrf_token %} {% for message in messages %} {% if request.session.success %}
         <div class="alert alert-success alert-dismissible fade show" role="alert">
             {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -90,7 +90,10 @@
                             </table>
                         </div>
                     </div>
-
+                    <div class="col-12">
+                        <button type="button" id="bulk_receipt_btn" class="btn btn-outline-primary mt-3">Bulk print Receipt</button>
+                        <button type="button" id="bulk_label_btn" class="btn btn-outline-success mt-3">Bulk print Label</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -318,6 +321,35 @@
         }
     });
 
+    // Print bulk_receipt_btn
+    $(document).ready(function() {
+        $("#bulk_receipt_btn").click(function() {
+            var c_note_details = [];
+            $("#table-1 tr:not(:first)").each(function() {
+                var firstCell = $(this).find("td:nth-child(2)");
+                c_note_details.push(parseInt(firstCell.text()));
+            });
+            token = $("input[name='csrfmiddlewaretoken']").val();
+            var bulk_receipt_print = {
+                csrfmiddlewaretoken: token,
+                c_note_numbers: c_note_details,
+            }
+            $.ajax({
+                url: "{% url 'bulk_print_receipt' %}",
+                method: "POST",
+                type: "json",
+                data: bulk_receipt_print,
+                success: function(res) {
+                    if (res.status) {
+                        console.log(res.bd);
+                    } else {
+                        alert(res.message);
+                    }
+                }
+            });
+        })
+    });
+
     // Set datetime in datetime fields
     var now = new Date();
     now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
@@ -327,9 +359,9 @@
     var print_pending = localStorage.getItem('print_id');
     if (print_pending) {
         var new_url = "print_cash_booking/" + print_pending;
-        // window.open(new_url, "_blank");
-        var print_url = '<a href="http://206.189.133.131:8080/' + new_url + '" target="blank"></a>'
-        $(print_url)[0].click();
+        window.open(new_url, "_blank");
+        // var print_url = '<a href="http://206.189.133.131:8080/' + new_url + '" target="blank"></a>'
+        // $(print_url)[0].click();
     }
 </script>
 
