--- a/api/templates/booking_dashboard.html
+++ b/api/templates/booking_dashboard.html
@@ -90,8 +90,14 @@
                             </table>
                         </div>
                     </div>
-                    <div class="col-12">
-                        <button type="button" id="bulk_receipt_btn" class="btn btn-outline-primary mt-3">Bulk print Receipt</button>
+                    <div class="col-12 d-flex">
+                        <!-- Bulk receipts -->
+                        <form action="{% url 'bulk_print_receipt' %}" method="POST" id="receipt_bulk_form" target="_blank">
+                            {% csrf_token %}
+                            <input type="hidden" name="receipt_input" id="receipt_input" value="">
+                            <button type="submit" id="bulk_receipt_btn" class="btn btn-outline-primary mt-3" style="margin-right: 10px;">Bulk print Receipt</button>
+                        </form>
+                        <!--Bulk Label print -->
                         <button type="button" id="bulk_label_btn" class="btn btn-outline-success mt-3">Bulk print Label</button>
                     </div>
                 </div>
@@ -323,30 +329,15 @@
 
     // Print bulk_receipt_btn
     $(document).ready(function() {
-        $("#bulk_receipt_btn").click(function() {
+        $("#receipt_bulk_form").submit(function(e) {
             var c_note_details = [];
             $("#table-1 tr:not(:first)").each(function() {
                 var firstCell = $(this).find("td:nth-child(2)");
                 c_note_details.push(parseInt(firstCell.text()));
             });
-            token = $("input[name='csrfmiddlewaretoken']").val();
-            var bulk_receipt_print = {
-                csrfmiddlewaretoken: token,
-                c_note_numbers: c_note_details,
-            }
-            $.ajax({
-                url: "{% url 'bulk_print_receipt' %}",
-                method: "POST",
-                type: "json",
-                data: bulk_receipt_print,
-                success: function(res) {
-                    if (res.status) {
-                        console.log(res.bd);
-                    } else {
-                        alert(res.message);
-                    }
-                }
-            });
+            c_note_details = JSON.stringify(c_note_details)
+            $("#receipt_input").val("");
+            $("#receipt_input").val(c_note_details);
         })
     });
 
