Add bulk label print

--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -253,7 +253,7 @@
                     <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
                     <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Spl del ch.</b></td>
                     <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td> -->
-                    <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Valuue</b></td>
+                    <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
                 </tr>
                 <tr>
                     <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.pcs }}</td>
