--- a/api/templates/booking_dashboard.html
+++ b/api/templates/booking_dashboard.html
@@ -95,10 +95,15 @@
                         <form action="{% url 'bulk_print_receipt' %}" method="POST" id="receipt_bulk_form" target="_blank">
                             {% csrf_token %}
                             <input type="hidden" name="receipt_input" id="receipt_input" value="">
-                            <button type="submit" id="bulk_receipt_btn" class="btn btn-outline-primary mt-3" style="margin-right: 10px;">Bulk print Receipt</button>
+                            <button type="submit" id="bulk_receipt_btn" class="btn btn-outline-primary mt-3" style="margin-right: 10px;"><i class="bi bi-printer"></i> Bulk print Receipt</button>
                         </form>
                         <!--Bulk Label print -->
-                        <button type="button" id="bulk_label_btn" class="btn btn-outline-success mt-3">Bulk print Label</button>
+                        <form action="{% url 'bulk_print_label' %}" method="POST" id="lbl_bulk_form" target="_blank">
+                            {% csrf_token %}
+                            <input type="hidden" name="lbl_input" id="lbl_input" value="">
+                            <button type="submit" id="bulk_label_btn" class="btn btn-outline-success mt-3" style="margin-right: 10px;"><i class="bi bi-printer"></i> Bulk print label</button>
+                        </form>
+                        <!-- <button type="button" id="" class="btn btn-outline-success mt-3">Bulk print Label</button> -->
                     </div>
                 </div>
             </div>
@@ -338,6 +343,18 @@
             c_note_details = JSON.stringify(c_note_details)
             $("#receipt_input").val("");
             $("#receipt_input").val(c_note_details);
+        })
+
+
+        $("#lbl_bulk_form").submit(function(e) {
+            var c_note_details = [];
+            $("#table-1 tr:not(:first)").each(function() {
+                var firstCell = $(this).find("td:nth-child(2)");
+                c_note_details.push(parseInt(firstCell.text()));
+            });
+            c_note_details = JSON.stringify(c_note_details)
+            $("#lbl_input").val("");
+            $("#lbl_input").val(c_note_details);
         })
     });
 
