--- a/api/templates/bulk_label_print.html
+++ b/api/templates/bulk_label_print.html
@@ -107,7 +107,7 @@
                     </tr>
 
                     <tr>
-                        <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b>, Mob: {{bd.0.sender_mobile }}</td>
+                        <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b></td>
                         {% if bd.0.mode_amount %}
                         <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>₹ {{ bd.0.mode_amount }}</b></td>
                         {% else %}
@@ -121,23 +121,23 @@
                     </tr>
 
                     <tr>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
+                        <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
+                        <!-- <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Ins ch.</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Spl del ch.</b></td>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td>
-                        <td colspan="2" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Total Amount</b></td>
+                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td> -->
+                        <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
 
                     </tr>
                     <tr>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.pcs }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.charged_weight }}</td>
+                        <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.pcs }}</td>
+                        <!-- <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.charged_weight }}</td>
                         <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.insurance_amt }}</td>
                         <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.declared_value }}</td>
                         <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.spl_del_charge }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.freight_charge }}</td>
-                        <td colspan="2" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>₹ {{ bd.0.amount }}</b></td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.freight_charge }}</td> -->
+                        <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>₹ {{ bd.0.declared_value }}</b></td>
                     </tr>
                     <tr>
                         <td colspan="8" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>Item Desc:</b> {{ bd.0.remarks }}</td>
@@ -236,7 +236,7 @@
                     </tr>
 
                     <tr>
-                        <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b>, Mob: {{bd.1.sender_mobile }}</td>
+                        <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b></td>
                         {% if bd.1.mode_amount %}
                         <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>₹ {{ bd.1.mode_amount }}</b></td>
                         {% else %}
@@ -250,23 +250,23 @@
                     </tr>
 
                     <tr>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
+                        <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
+                        <!-- <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Ins ch.</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Spl del ch.</b></td>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td>
-                        <td colspan="2" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Total Amount</b></td>
+                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td> -->
+                        <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
 
                     </tr>
                     <tr>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.1.pcs }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.1.charged_weight }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.1.insurance_amt }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.1.declared_value }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.1.spl_del_charge }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.1.freight_charge }}</td>
-                        <td colspan="2" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>₹ {{ bd.1.amount }}</b></td>
+                        <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.1.pcs }}</td>
+                        <!-- <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.charged_weight }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.insurance_amt }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.declared_value }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.spl_del_charge }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.freight_charge }}</td> -->
+                        <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>₹ {{ bd.1.declared_value }}</b></td>
                     </tr>
                     <tr>
                         <td colspan="8" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>Item Desc:</b> {{ bd.1.remarks }}</td>
@@ -369,7 +369,7 @@
                     </tr>
 
                     <tr>
-                        <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b>, Mob: {{bd.2.sender_mobile }}</td>
+                        <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b></td>
                         {% if bd.2.mode_amount %}
                         <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>₹ {{ bd.2.mode_amount }}</b></td>
                         {% else %}
@@ -383,23 +383,23 @@
                     </tr>
 
                     <tr>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
+                        <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
+                        <!-- <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Ins ch.</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Spl del ch.</b></td>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td>
-                        <td colspan="2" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Total Amount</b></td>
+                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td> -->
+                        <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
 
                     </tr>
                     <tr>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.2.pcs }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.2.charged_weight }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.2.insurance_amt }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.2.declared_value }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.2.spl_del_charge }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.2.freight_charge }}</td>
-                        <td colspan="2" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>₹ {{ bd.2.amount }}</b></td>
+                        <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.2.pcs }}</td>
+                        <!-- <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.charged_weight }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.insurance_amt }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.declared_value }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.spl_del_charge }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.freight_charge }}</td> -->
+                        <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>₹ {{ bd.2.declared_value }}</b></td>
                     </tr>
                     <tr>
                         <td colspan="8" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>Item Desc:</b> {{ bd.2.remarks }}</td>
@@ -499,7 +499,7 @@
                     </tr>
 
                     <tr>
-                        <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b>, Mob: {{bd.3.sender_mobile }}</td>
+                        <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b></td>
                         {% if bd.3.mode_amount %}
                         <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>₹ {{ bd.3.mode_amount }}</b></td>
                         {% else %}
@@ -513,23 +513,23 @@
                     </tr>
 
                     <tr>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
+                        <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
+                        <!-- <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Ins ch.</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
                         <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Spl del ch.</b></td>
-                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td>
-                        <td colspan="2" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Total Amount</b></td>
+                        <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td> -->
+                        <td colspan="4" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
 
                     </tr>
                     <tr>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.3.pcs }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.3.charged_weight }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.3.insurance_amt }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.3.declared_value }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.3.spl_del_charge }}</td>
-                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.3.freight_charge }}</td>
-                        <td colspan="2" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>₹ {{ bd.3.amount }}</b></td>
+                        <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.3.pcs }}</td>
+                        <!-- <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.charged_weight }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.insurance_amt }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.declared_value }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.spl_del_charge }}</td>
+                        <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.0.freight_charge }}</td> -->
+                        <td colspan="4" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>₹ {{ bd.3.declared_value }}</b></td>
                     </tr>
                     <tr>
                         <td colspan="8" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>Item Desc:</b> {{ bd.3.remarks }}</td>
@@ -575,9 +575,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script>
-        $(document).ready(function() {
-            window.print();
-        });
+        // $(document).ready(function() {
+        //     window.print();
+        // });
     </script>
 </body>
 
