Add tandc or pand p page

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -148,9 +148,9 @@
                     </div>
                     <div class="col-6">
                         <a href="tracking" class="link-text-decor">Track Shipment</a><br>
-                        <a href="" class="link-text-decor">Privacy & Policy</a><br>
-                        <a href="" class="link-text-decor">Terms & Condition</a><br>
-                        <a href="" class="link-text-decor">Careers</a><br>
+                        <a href="{% url 'privacy_and_policy' %}" class="link-text-decor">Privacy & Policy</a><br>
+                        <a href="{% url 'terms_and_conditions' %}" class="link-text-decor">Terms & Condition</a><br>
+                        <!-- <a href="" class="link-text-decor">Careers</a><br> -->
                     </div>
                 </div>
             </div>
